--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -548,11 +548,11 @@
 	<key>NSWindow Frame Preferences</key>
 	<string>223 572 924 485 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 5 1914 1052 0 0 1920 1057 </string>
+	<string>0 5 954 1052 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>0 581 650 476 0 0 1920 1057 </string>
+	<string>222 31 650 476 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>960 5 954 1052 0 0 1920 1057 </string>
+	<string>0 5 954 1052 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
 	<string>0 5 954 1052 0 0 1920 1057 </string>
 	<key>NSWindow Frame iTerm Window 4</key>
@@ -1294,7 +1294,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>459210648.00298202</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>464475535.563712</real>
+	<real>465598777.58476001</real>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -1359,7 +1359,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-09-20T19:17:02Z</date>
+	<date>2015-10-02T19:17:38Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1390,6 +1390,10 @@
 	<true/>
 	<key>UseLionStyleFullscreen</key>
 	<true/>
+	<key>WebKitDefaultFontSize</key>
+	<integer>11</integer>
+	<key>WebKitStandardFont</key>
+	<string>.Helvetica Neue DeskInterface</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
